added routing, ability to enter to add item, css polishing

--- a/src/components/to-do-list/to-do-list.component.html
+++ b/src/components/to-do-list/to-do-list.component.html
@@ -14,7 +14,7 @@
     </ol>
 
     <p>Need to do anything else?</p>
-    <input  [(ngModel)]="newItem" />
+    <input (keyup.enter)="addButtonClicked(newItem)" [(ngModel)]="newItem" />
     <button (click)="addButtonClicked(newItem)" class="buttonClassUndone" >Add Item</button>
     
   </div>
