--- a/src/components/to-do-list/to-do-list.component.scss
+++ b/src/components/to-do-list/to-do-list.component.scss
@@ -30,6 +30,9 @@ li:hover{
     margin: 20px;
     border-radius: 5%;
     padding: 50px;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .divbody{
